# datastructures-algos-c

./: .gitignore  CMakeLists.txt  main.c
array-list/: array-list-util.c  array-list-util.h  array-list.h
binary-search-tree/: binary-search-tree-util.c  binary-search-tree-util.h
binary-tree/: binary-tree-util.c  binary-tree-util.h  binary-tree.h
circle-linked-list/: circle-linked-list-util.c  circle-linked-list-util.h
circle-list/: circle-list-util.c  circle-list-util.h  circle-list.h
deque/: deque.h  deque_util.c  deque_util.h
heap/: heap-util.c  heap-util.h  heap.h
insert/: game_entry.h  insert.c  insert.h
linked-list/: linked-list-util.c  linked-list-util.h  linked-list.h
queue/: queue.h  queue_util.c  queue_util.h
stack/: stack-util.c  stack-util.h  stack.h
